testdata/baselines/reference/submodule/conformance/typeArgumentInferenceWithClassExpression2.errors.txt
typeArgumentInferenceWithClassExpression2.ts(6,5): error TS2345: Argument of type '{ new(): (Anonymous class); prop: string; prototype: (Anonymous class); }' is not assignable to parameter of type '{ new(): (Anonymous class)<unknown>; prototype: (Anonymous class)<any>; }'.
  Property 'prop' is missing in type '(Anonymous class)' but required in type '(Anonymous class)<unknown>'.
typeArgumentInferenceWithClassExpression2.ts(6,38): error TS2339: Property 'length' does not exist on type 'unknown'.


==== typeArgumentInferenceWithClassExpression2.ts (2 errors) ====
    function foo<T>(x = class { prop: T }): T {
        return undefined;
    }
    
    // Should not infer string because it is a static property
    foo(class { static prop = "hello" }).length;
        ~~~~~
!!! error TS2345: Argument of type '{ new(): (Anonymous class); prop: string; prototype: (Anonymous class); }' is not assignable to parameter of type '{ new(): (Anonymous class)<unknown>; prototype: (Anonymous class)<any>; }'.
!!! error TS2345:   Property 'prop' is missing in type '(Anonymous class)' but required in type '(Anonymous class)<unknown>'.
!!! related TS2728 typeArgumentInferenceWithClassExpression2.ts:1:29: 'prop' is declared here.
                                         ~~~~~~
!!! error TS2339: Property 'length' does not exist on type 'unknown'.